<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:background="?attr/colorSurface">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_file_heading"
            android:textAppearance="@style/TextAppearance.Giant.Title"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/fileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="/storage/emulated/0/test.txt"
            android:textAppearance="@style/TextAppearance.Giant.Subtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/typeDeduced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            tools:text="image/jpeg"
            style="@style/Widget.Giant.Button.Secondary"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/detected_type" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            tools:text="image/jpeg"
            style="@style/Widget.Giant.Button.Secondary"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/extension_type" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openByPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_picture"
            style="@style/Widget.Giant.Button.Secondary"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openByVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_video"
            style="@style/Widget.Giant.Button.Secondary"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openByText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_text"
            style="@style/Widget.Giant.Button.Secondary"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openByMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_audio"
            style="@style/Widget.Giant.Button.Secondary"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openByHex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_hex"
            style="@style/Widget.Giant.Button.Secondary"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openByAny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_any"
            style="@style/Widget.Giant.Button.Secondary"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSurface" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
